[gd_scene load_steps=39 format=3 uid="uid://cippl3qeqq73l"]

[ext_resource type="Script" uid="uid://bt6icsw3luyre" path="res://main.gd" id="1_cagca"]
[ext_resource type="PackedScene" uid="uid://d20xy80xd171g" path="res://addons/xr-autohandtracker/OpenXRHandData.tscn" id="2_hw7j7"]
[ext_resource type="PackedScene" uid="uid://bufelcry36rw1" path="res://addons/xr-autohandtracker/auto_handtracker.tscn" id="3_7v2m6"]
[ext_resource type="Script" uid="uid://8goj51u7g0kk" path="res://rubberhand.gd" id="3_86svk"]
[ext_resource type="PackedScene" uid="uid://dd35twe7yvkqf" path="res://FlatDisplay.tscn" id="3_o8mx1"]
[ext_resource type="Script" uid="uid://bdq7831nlkq57" path="res://HandJoints.gd" id="4_eaqi8"]
[ext_resource type="PackedScene" uid="uid://8jsauvbqvkou" path="res://addons/xr-autohandtracker/simplelefthand.glb" id="6_vivmo"]
[ext_resource type="PackedScene" uid="uid://dngec4nbh3ngj" path="res://addons/xr-autohandtracker/simplerighthand.glb" id="7_2cqfq"]
[ext_resource type="PackedScene" uid="uid://c7d3acll3wppi" path="res://addons/xr-radialmenu/RadialMenu.tscn" id="7_dg77c"]
[ext_resource type="Texture2D" uid="uid://vgrfqvqnyo3q" path="res://3DLABbg_UV_Map_Checker_04_512x512.jpg" id="7_w48qg"]
[ext_resource type="Script" uid="uid://bys2i3bex48tg" path="res://BodyTrackingData.gd" id="12_2cqfq"]
[ext_resource type="PackedScene" uid="uid://ctltchlf2j2r4" path="res://addons/xr-simulator/XRSimulator.tscn" id="12_f86bf"]
[ext_resource type="Script" uid="uid://caest0w4mjxt5" path="res://FaceAudioTracking.gd" id="12_ycdy4"]
[ext_resource type="PackedScene" uid="uid://cmyouov3wf235" path="res://scenemanager/sceneanchor.tscn" id="13_w48qg"]
[ext_resource type="Script" uid="uid://c1jp1xxsyiyhg" path="res://scenemanager/open_xr_fb_scene_manager.gd" id="13_ycdy4"]
[ext_resource type="Script" uid="uid://binshs17pl7bm" path="res://scenemanager/open_xr_fb_spatial_anchor_manager.gd" id="15_vivmo"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_eyx45"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_tsis2"]
sky_material = SubResource("ProceduralSkyMaterial_eyx45")

[sub_resource type="Environment" id="Environment_0xu52"]
background_mode = 2
sky = SubResource("Sky_tsis2")
tonemap_mode = 2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_vivmo"]
resource_name = "Material_1"
transparency = 1
albedo_color = Color(0.945596, 0.976528, 1, 0.623529)
albedo_texture = ExtResource("7_w48qg")

[sub_resource type="BoxMesh" id="BoxMesh_vivmo"]
size = Vector3(0.1, 0.1, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2cqfq"]
albedo_color = Color(0.274621, 0.648482, 0.297847, 1)

[sub_resource type="QuadMesh" id="QuadMesh_eslsg"]
size = Vector2(0.8, 0.5)
center_offset = Vector3(0, 0.05, 0)

[sub_resource type="ViewportTexture" id="ViewportTexture_46vof"]
viewport_path = NodePath("XROrigin3D/HandJoints/FrontOfPlayer/FlatDisplayMesh/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6gabm"]
resource_local_to_scene = true
shading_mode = 0
albedo_color = Color(0, 0.615686, 0.619608, 1)
albedo_texture = SubResource("ViewportTexture_46vof")

[sub_resource type="SphereMesh" id="SphereMesh_65vmt"]
radius = 0.02
height = 0.04

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_brx0b"]
albedo_color = Color(1, 1, 0, 1)

[sub_resource type="BoxMesh" id="BoxMesh_yct16"]
size = Vector3(0.01, 0.07, 0.01)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g60ck"]
albedo_color = Color(0.992157, 0.0117647, 0.0666667, 1)

[sub_resource type="BoxMesh" id="BoxMesh_2cqfq"]
size = Vector3(0.6, 0.4, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yaehf"]
transparency = 1
albedo_color = Color(1, 1, 0.521569, 0.231373)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_074og"]
transparency = 1
albedo_color = Color(1, 0.168627, 1, 0.6)

[sub_resource type="PrismMesh" id="PrismMesh_dg77c"]
size = Vector3(0.1, 8, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dg77c"]
albedo_color = Color(0.852053, 0.00058989, 0.854236, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rm4v2"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_bkxwk"]
seamless = true
noise = SubResource("FastNoiseLite_rm4v2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3vxx6"]
albedo_color = Color(0.466667, 0.247059, 0.196078, 1)
albedo_texture = SubResource("NoiseTexture2D_bkxwk")
uv1_scale = Vector3(4, 4, 4)

[sub_resource type="BoxMesh" id="BoxMesh_5clia"]
material = SubResource("StandardMaterial3D_3vxx6")
size = Vector3(10, 0.01, 10)

[node name="Main" type="Node3D"]
script = ExtResource("1_cagca")

[node name="MeshInstance3DFLA" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79506, -0.430125)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.972307, 0.231448, -0.0324245, -0.168036, 0.788752, 0.591299, 0.16243, -0.569476, 0.8058, 0, 4.78147, -0.575441)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0xu52")

[node name="XROrigin3D" type="XROrigin3D" parent="."]

[node name="XRCamera3D" type="XRCamera3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79704, 0.0822801)

[node name="SignalLog" type="Label3D" parent="XROrigin3D/XRCamera3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.096785, 0.0251529, 0, -0.0251529, 0.096785, -0.0705969, -0.0605885, -0.151146)
visible = false
text = "Ding"

[node name="SignalLog2" type="Label3D" parent="XROrigin3D/XRCamera3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.096785, 0.0251529, 0, -0.0251529, 0.096785, -0.0577948, -0.08284, -0.151146)
visible = false
text = "Dong"

[node name="OpenXRHandData" parent="XROrigin3D" instance=ExtResource("2_hw7j7")]

[node name="RubberHand" type="Node" parent="XROrigin3D/OpenXRHandData"]
script = ExtResource("3_86svk")

[node name="XRController3DLeft" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.169555, 1.69177, -0.268697)
tracker = &"left_hand"

[node name="simplelefthand" parent="XROrigin3D/XRController3DLeft" instance=ExtResource("6_vivmo")]
transform = Transform3D(0.0471668, 0.545034, -0.837086, 0.0306621, -0.838414, -0.544171, -0.998416, 0, -0.0562571, 0, 0, 0)

[node name="LeftHandHumanoidMesh" parent="XROrigin3D/XRController3DLeft/simplelefthand/LeftHandHumanoid/Skeleton3D" index="0"]
surface_material_override/0 = SubResource("StandardMaterial3D_vivmo")

[node name="AutoHandtracker" parent="XROrigin3D/XRController3DLeft" instance=ExtResource("3_7v2m6")]

[node name="XRController3DRight" type="XRController3D" parent="XROrigin3D"]
transform = Transform3D(0.399725, 0, 0.916635, 0, 1, 0, -0.916635, 0, 0.399725, 0.169251, 1.69625, -0.288043)
tracker = &"right_hand"

[node name="simplerighthand" parent="XROrigin3D/XRController3DRight" instance=ExtResource("7_2cqfq")]

[node name="AutoHandtracker" parent="XROrigin3D/XRController3DRight" instance=ExtResource("3_7v2m6")]
visiblehandtrackskeletonRaw = true

[node name="XRAimRight" type="XRNode3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.462758, 1.39293, -0.234335)
tracker = &"right_hand"
pose = &"aim"
show_when_tracked = true

[node name="RadialMenu" parent="XROrigin3D/XRAimRight" instance=ExtResource("7_dg77c")]

[node name="XRNode3D" type="XRNode3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.60491, 2.07751, -6.98268)
tracker = &"/user/eyes_ext"

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/XRNode3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.73947)
mesh = SubResource("BoxMesh_vivmo")
surface_material_override/0 = SubResource("StandardMaterial3D_2cqfq")

[node name="HandJoints" type="Node3D" parent="XROrigin3D"]
script = ExtResource("4_eaqi8")

[node name="FrontOfPlayer" type="Node3D" parent="XROrigin3D/HandJoints"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.65802, -0.491668)

[node name="FlatDisplayMesh" type="MeshInstance3D" parent="XROrigin3D/HandJoints/FrontOfPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0258811, 0.169554, -0.0442287)
mesh = SubResource("QuadMesh_eslsg")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_6gabm")

[node name="SubViewport" type="SubViewport" parent="XROrigin3D/HandJoints/FrontOfPlayer/FlatDisplayMesh"]
size = Vector2i(800, 500)

[node name="FlatDisplay" parent="XROrigin3D/HandJoints/FrontOfPlayer/FlatDisplayMesh/SubViewport" instance=ExtResource("3_o8mx1")]

[node name="Joints2D" type="Node3D" parent="XROrigin3D/HandJoints/FrontOfPlayer"]

[node name="FingerButton" type="MeshInstance3D" parent="XROrigin3D/HandJoints/FrontOfPlayer"]
mesh = SubResource("SphereMesh_65vmt")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_brx0b")

[node name="Touched" type="MeshInstance3D" parent="XROrigin3D/HandJoints/FrontOfPlayer/FingerButton"]
visible = false
mesh = SubResource("BoxMesh_yct16")
surface_material_override/0 = SubResource("StandardMaterial3D_g60ck")

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="XROrigin3D/HandJoints/FrontOfPlayer"]
transform = Transform3D(1, 0, 0, 0, 0.975465, 0.220153, 0, -0.220153, 0.975465, -0.0506874, -0.16801, 0)
remote_path = NodePath("../../../FaceAudioTracking/FaceTrackSticks")
update_scale = false

[node name="RemoteTransform3D2" type="RemoteTransform3D" parent="XROrigin3D/HandJoints/FrontOfPlayer"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.594036, 0)
remote_path = NodePath("../../../BodyTrackingData")
update_scale = false

[node name="FaceAudioTracking" type="Node3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.394503, 1.38851, -0.522603)
script = ExtResource("12_ycdy4")

[node name="FaceTrackSticks" type="Node3D" parent="XROrigin3D/FaceAudioTracking"]
transform = Transform3D(1, 0, 0, 0, 0.975465, 0.220153, 0, -0.220153, 0.975465, 0.343816, 0.1015, 0.030935)

[node name="BodyTrackingData" type="Node3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25206, -0.491668)
script = ExtResource("12_2cqfq")

[node name="MiniBody" type="Node3D" parent="XROrigin3D/BodyTrackingData"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="XROrigin3D/BodyTrackingData"]
mesh = SubResource("BoxMesh_2cqfq")
surface_material_override/0 = SubResource("StandardMaterial3D_yaehf")

[node name="LeftHandFbTracker" type="XRNode3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.313141, 1.24593, -0.590358)
visible = false
tracker = &"/user/hand_tracker/left"

[node name="OpenXRFbHandTrackingMesh" type="OpenXRFbHandTrackingMesh" parent="XROrigin3D/LeftHandFbTracker"]
material = SubResource("StandardMaterial3D_074og")

[node name="XRHandModifier3D" type="XRHandModifier3D" parent="XROrigin3D/LeftHandFbTracker/OpenXRFbHandTrackingMesh"]

[node name="RightHandFbTracker" type="XRNode3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.440078, 1.24593, -0.590358)
visible = false
tracker = &"/user/hand_tracker/right"

[node name="OpenXRFbHandTrackingMesh" type="OpenXRFbHandTrackingMesh" parent="XROrigin3D/RightHandFbTracker"]
hand = 1
material = SubResource("StandardMaterial3D_074og")
bones/0/name = "RightPalm"
bones/1/name = "RightHand"
bones/2/name = "RightThumbMetacarpal"
bones/3/name = "RightThumbProximal"
bones/4/name = "RightThumbDistal"
bones/5/name = "RightThumbTip"
bones/6/name = "RightIndexMetacarpal"
bones/7/name = "RightIndexProximal"
bones/8/name = "RightIndexIntermediate"
bones/9/name = "RightIndexDistal"
bones/10/name = "RightIndexTip"
bones/11/name = "RightMiddleMetacarpal"
bones/12/name = "RightMiddleProximal"
bones/13/name = "RightMiddleIntermediate"
bones/14/name = "RightMiddleDistal"
bones/15/name = "RightMiddleTip"
bones/16/name = "RightRingMetacarpal"
bones/17/name = "RightRingProximal"
bones/18/name = "RightRingIntermediate"
bones/19/name = "RightRingDistal"
bones/20/name = "RightRingTip"
bones/21/name = "RightLittleMetacarpal"
bones/22/name = "RightLittleProximal"
bones/23/name = "RightLittleIntermediate"
bones/24/name = "RightLittleDistal"
bones/25/name = "RightLittleTip"

[node name="XRHandModifier3D" type="XRHandModifier3D" parent="XROrigin3D/RightHandFbTracker/OpenXRFbHandTrackingMesh"]
hand_tracker = &"/user/hand_tracker/right"

[node name="XRSimulator" parent="XROrigin3D" instance=ExtResource("12_f86bf")]

[node name="OriginStick" type="MeshInstance3D" parent="XROrigin3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4, 0)
visible = false
mesh = SubResource("PrismMesh_dg77c")
surface_material_override/0 = SubResource("StandardMaterial3D_dg77c")

[node name="OriginStick2" type="MeshInstance3D" parent="XROrigin3D/OriginStick"]
transform = Transform3D(1, 0, 0, 0, -2.18557e-08, 1, 0, -0.5, -4.37114e-08, 0, -0.613974, 1.8672)
mesh = SubResource("PrismMesh_dg77c")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_dg77c")

[node name="OpenXRFbSceneManager" type="OpenXRFbSceneManager" parent="XROrigin3D"]
default_scene = ExtResource("13_w48qg")
script = ExtResource("13_ycdy4")

[node name="OpenXRFbSpatialAnchorManager" type="OpenXRFbSpatialAnchorManager" parent="XROrigin3D"]
script = ExtResource("15_vivmo")

[node name="MeshInstance3DFloor" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_5clia")
skeleton = NodePath("../XROrigin3D")

[node name="MiniScene" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.98709, 0.825349, -0.519652)

[connection signal="menuitemselected" from="XROrigin3D/XRAimRight/RadialMenu" to="." method="_on_radial_menu_menuitemselected"]

[editable path="XROrigin3D/XRController3DLeft/simplelefthand"]
[editable path="XROrigin3D/XRController3DLeft/AutoHandtracker"]
[editable path="XROrigin3D/XRController3DRight/simplerighthand"]
[editable path="XROrigin3D/XRController3DRight/AutoHandtracker"]
